New program rule model